[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/debug/VehicleLightsDebug.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/debug/GraphicsDebug.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/hud/debug/DebugScreen.gd" type="Script" id=3]
[ext_resource path="res://hud/debug/VehiclesDebug.tscn" type="PackedScene" id=4]

[node name="DebugScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ScreenNode" type="VBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 147.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="ScreenNode"]
margin_right = 147.0
margin_bottom = 14.0
text = "TrafficDrive alpha 0.2.0"

[node name="Separator1" type="HSeparator" parent="ScreenNode"]
margin_top = 18.0
margin_right = 147.0
margin_bottom = 22.0

[node name="GraphicsDebug" parent="ScreenNode" instance=ExtResource( 2 )]
margin_top = 26.0
margin_right = 147.0

[node name="Separator2" type="HSeparator" parent="ScreenNode"]
margin_top = 44.0
margin_right = 147.0
margin_bottom = 48.0

[node name="VehiclesDebug" parent="ScreenNode" instance=ExtResource( 4 )]
margin_top = 52.0
margin_right = 147.0
margin_bottom = 282.0

[node name="Separator3" type="HSeparator" parent="ScreenNode"]
margin_top = 286.0
margin_right = 147.0
margin_bottom = 290.0

[node name="VehicleLightsDebug" parent="ScreenNode" instance=ExtResource( 1 )]
margin_top = 294.0
margin_right = 147.0
margin_bottom = 362.0
